--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -7,3 +7,6 @@ browser=firefox
 url=https://www.youtube.com/
 webdriver.chrome.driver=C:/Soft/Webdriver/chromedriver.exe
 webdriver.gecko.driver=C:/Soft/Webdriver/geckodriver.exe
+gmailurl=https://accounts.google.com/signin
+login=eexample218@gmail.com
+password=Example18*
